# EcuacionCalor2D

./: EC_Sec  run.sh
in/: in0  in1  in2  in3  in4  in5  in6  in7  in8  in9
paralelo/: CMakeLists.txt  ecuacionCalor2D.cpp  ecuacionCalor2D.cu  ecuacionCalor2DConArmadillo.cu  ecuacionCalor2DEnParaleloMatrizA.cu  ecuacionCalor2DSinArmadillo.cu
secuencial/: CMakeLists.txt  EC_2D  Makefile  delete.sh  ecuacionCalor2D.cc  ecuacionCalor2D.cpp  in  plot  run.sh
times/secuencial/: times0.txt  times1.txt  times2.txt  times3.txt  times4.txt  times5.txt  times6.txt  times7.txt  times8.txt  times9.txt  times{0..9}.txt
